[tool.poetry]
name = "app"
version = "0.1.0"
description = "conversor de pfx para pem"
authors = ["weslenpy <weslenjhony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
